--- a/simpost-theme/layouts/partials/head.html
+++ b/simpost-theme/layouts/partials/head.html
@@ -5,7 +5,7 @@
 {{ .Hugo.Generator }}
 <title>{{ .Title }}{{ if .IsHome }} &middot; {{ .Site.Title }}{{ end }}</title>
 <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}">
-<link rel="stylesheet" href="{{ "css/style.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/styles.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
 {{ range .Site.Params.customCSS }}
 <link rel="stylesheet" href="{{ . | absURL }}">
