--- a/simpost-theme/layouts/partials/profile.html
+++ b/simpost-theme/layouts/partials/profile.html
@@ -16,6 +16,12 @@
         <a href="/post" rel="noopener noreferrer">Blog</a>
         <span>|</span>
     </li>
+    <!--
+    <li class="item">
+        <a href="/categories" rel="noopener noreferrer">Categories</a>
+        <span>|</span>
+    </li>
+    -->
     <li class="item">
         <a href="/about" rel="noopener noreferrer">About</a>
         <span>|</span>
