--- a/simpost-theme/static/sass/_fonts.scss
+++ b/simpost-theme/static/sass/_fonts.scss
@@ -47,3 +47,31 @@
     font-style: normal;
     font-weight: normal;
 }
+
+@font-face {
+    font-family: "Go-Regular";
+    src: url("/fonts/Go-Regular.ttf") format("truetype"); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Go-Mono";
+    src: url("/fonts/Go-Mono.ttf") format("truetype"); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Futura-Light";
+    src: url("/fonts/Futura-LT-Light.ttf") format("truetype"); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Futura-Medium";
+    src: url("/fonts/Futura-LT-Medium.ttf") format("truetype"); /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+    font-style: normal;
+    font-weight: normal;
+}
